--- a/index.html
+++ b/index.html
@@ -5,9 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>Hello</h1>
+    <h1>Heading 1</h1>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam illum
+      amet facere dolor animi laborum repellat doloremque dolorem modi iure
+      dolores expedita ea facilis, rerum nihil nisi rem! Iure, ullam.
+    </p>
+    <h2>Heading 2</h2>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam illum amet
+    facere dolor animi laborum repellat doloremque dolorem modi iure dolores
+    expedita e
+    <h3>Heading 3</h3>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam illum amet
+    facere dolor animi laborum repellat doloremque dolorem modi iure dolores
+    expedita e
   </body>
 </html>
