--- a/index.html
+++ b/index.html
@@ -19,20 +19,5 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <h1>Heading 1</h1>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam illum
-      amet facere dolor animi laborum repellat doloremque dolorem modi iure
-      dolores expedita ea facilis, rerum nihil nisi rem! Iure, ullam.
-    </p>
-    <h2>Heading 2</h2>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam illum amet
-    facere dolor animi laborum repellat doloremque dolorem modi iure dolores
-    expedita e
-    <h3>Heading 3</h3>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam illum amet
-    facere dolor animi laborum repellat doloremque dolorem modi iure dolores
-    expedita e
-  </body>
+  <body></body>
 </html>
