feat: add buttons

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <span class="icon-container">
-      <svg class="icon icon--primary">
-        <use xlink:href="images/sprite.svg#wordpress"></use>
-      </svg>
-    </span>
+    <button class="btn btn--primary btn--block">Get Started</button>
+    <br />
+    <a href="#buy" class="btn btn--secondary btn--block">Get Started<a/>
+    <br />
+    <button class="btn btn--accent">Get Started</button>
+    <br>
+    <button class="btn btn--outline">Buy now</button>
   </body>
 </html>
