feat: add inputs

--- a/index.html
+++ b/index.html
@@ -19,13 +19,5 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <button class="btn btn--primary btn--block">Get Started</button>
-    <br />
-    <a href="#buy" class="btn btn--secondary btn--block">Get Started<a/>
-    <br />
-    <button class="btn btn--accent">Get Started</button>
-    <br>
-    <button class="btn btn--outline">Buy now</button>
-  </body>
+  <body></body>
 </html>
