--- a/index.html
+++ b/index.html
@@ -21,25 +21,28 @@
   </head>
   <body>
     <div style="width: 50%; margin: 20px">
-      <div class="card card--primary">
-        <div class="card__header">Title</div>
-        <div class="card__body">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis amet
-          accusamus delectus nobis optio. Quaerat rerum accusantium, autem
-          officiis ea doloremque iusto maxime, commodi obcaecati maiores laborum
-          minus, hic numquam!
+      <!-- Start Plan -->
+      <div class="plan plan--popular">
+        <div class="card card--secondary">
+          <div class="card__header">
+            <h3 class="plan__name">Entry</h3>
+            <span class="plan__price">$14</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--secondary badge--small">10% OFF</span>
+            <span class="plan__description">Easy start on the cloud</span>
+          </div>
+          <div class="card__body">
+            <ul class="list list--tick">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">Unlimited Bandwidth</li>
+              <li class="list__item">100 GB SSD Storage</li>
+              <li class="list__item">3 GB RAM</li>
+            </ul>
+            <button class="btn btn--outline btn--block">Buy Now</button>
+          </div>
         </div>
       </div>
-
-      <div class="card card--secondary">
-        <div class="card__header">Title</div>
-        <div class="card__body">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis amet
-          accusamus delectus nobis optio. Quaerat rerum accusantium, autem
-          officiis ea doloremque iusto maxime, commodi obcaecati maiores laborum
-          minus, hic numquam!
-        </div>
-      </div>
+      <!-- End Plan -->
     </div>
   </body>
 </html>
