--- a/index.html
+++ b/index.html
@@ -21,28 +21,24 @@
   </head>
   <body>
     <div style="width: 50%; margin: 20px">
-      <!-- Start Plan -->
-      <div class="plan plan--popular">
-        <div class="card card--secondary">
-          <div class="card__header">
-            <h3 class="plan__name">Entry</h3>
-            <span class="plan__price">$14</span>
-            <span class="plan__billing-cycle">/month</span>
-            <span class="badge badge--secondary badge--small">10% OFF</span>
-            <span class="plan__description">Easy start on the cloud</span>
-          </div>
-          <div class="card__body">
-            <ul class="list list--tick">
-              <li class="list__item">Unlimited Websites</li>
-              <li class="list__item">Unlimited Bandwidth</li>
-              <li class="list__item">100 GB SSD Storage</li>
-              <li class="list__item">3 GB RAM</li>
-            </ul>
-            <button class="btn btn--outline btn--block">Buy Now</button>
-          </div>
+      <!-- Media Component -->
+      <div class="media">
+        <div class="media__image">
+          <svg class="icon icon--primary">
+            <use xlink:href="images/sprite.svg#snap"></use>
+          </svg>
+        </div>
+        <div class="media__body">
+          <h3 class="media__title">Easy Start and Managed Update</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores
+            quis odit a, in praesentium ipsam molestias voluptatibus, tempora
+            omnis expedita doloremque quas tenetur tempore repellendus saepe at
+            sequi? Optio, in!
+          </p>
         </div>
       </div>
-      <!-- End Plan -->
+      <!-- End Media Component -->
     </div>
   </body>
 </html>
