--- a/index.html
+++ b/index.html
@@ -20,25 +20,30 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div style="width: 50%; margin: 20px">
-      <!-- Media Component -->
-      <div class="media">
-        <div class="media__image">
-          <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#snap"></use>
-          </svg>
+    <!-- Quote Component -->
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
+        blanditiis possimus saepe commodi animi tempore eveniet aliquid, unde ea
+        magni iste molestias porro magnam explicabo, laborum, aut ratione
+        inventore quae?
+      </p>
+      <footer>
+        <!-- Media Quote Component -->
+        <div class="media">
+          <div class="media__image">
+            <svg class="icon icon--primary quote__line">
+              <use xlink:href="images/sprite.svg#line"></use>
+            </svg>
+          </div>
+          <div class="media__body">
+            <h3 class="media__title quote_author">John Smith</h3>
+            <p class="quote__organization">ABC Company</p>
+          </div>
         </div>
-        <div class="media__body">
-          <h3 class="media__title">Easy Start and Managed Update</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores
-            quis odit a, in praesentium ipsam molestias voluptatibus, tempora
-            omnis expedita doloremque quas tenetur tempore repellendus saepe at
-            sequi? Optio, in!
-          </p>
-        </div>
-      </div>
-      <!-- End Media Component -->
-    </div>
+        <!-- End Media Quote Component -->
+      </footer>
+    </blockquote>
+    <!-- End Quote Component -->
   </body>
 </html>
