--- a/index.html
+++ b/index.html
@@ -20,30 +20,10 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <!-- Quote Component -->
-    <blockquote class="quote">
-      <p class="quote__text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
-        blanditiis possimus saepe commodi animi tempore eveniet aliquid, unde ea
-        magni iste molestias porro magnam explicabo, laborum, aut ratione
-        inventore quae?
-      </p>
-      <footer>
-        <!-- Media Quote Component -->
-        <div class="media">
-          <div class="media__image">
-            <svg class="icon icon--primary quote__line">
-              <use xlink:href="images/sprite.svg#line"></use>
-            </svg>
-          </div>
-          <div class="media__body">
-            <h3 class="media__title quote_author">John Smith</h3>
-            <p class="quote__organization">ABC Company</p>
-          </div>
-        </div>
-        <!-- End Media Quote Component -->
-      </footer>
-    </blockquote>
-    <!-- End Quote Component -->
+    <div class="grid grid--1x3">
+      <div style="height: 100px; background: gold"></div>
+      <div style="height: 100px; background: dodgerblue"></div>
+      <div style="height: 100px; background: darkcyan"></div>
+    </div>
   </body>
 </html>
