--- a/index.html
+++ b/index.html
@@ -20,21 +20,51 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body style="padding: 5rem">
-    <!-- Callouts -->
-    <div class="callout callout--primary">
-      <div class="grid grid--1x2">
-        <div class="callout__content">
-          <h2 class="callout__heading">Ready to get started?</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae qui
-            sequi ducimus accusantium iusto ut et veniam porro reprehenderit
-            cumque assumenda fugiat quasi deserunt culpa inventore dignissimos,
-            libero delectus veritatis.
-          </p>
-        </div>
-        <a href="#" class="btn btn--secondary btn--stretched">Get started</a>
+    <!-- Collapsible -->
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 1</h2>
+
+        <svg class="icon icon--primary icon--white collapsible__chevron">
+          <use xlink:href="images/sprite.svg#chevron"></use>
+        </svg>
+      </header>
+      <div class="collapsible__content">
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident
+          reiciendis doloribus illo quidem alias. Eos nihil voluptatem ad fugit
+          reiciendis enim officia itaque impedit debitis, modi totam illum eaque
+          quos.
+        </p>
       </div>
     </div>
-    <!-- End Callouts -->
+    <!-- End Collapsible -->
+    <!-- Collapsible -->
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 2</h2>
+
+        <svg class="icon icon--primary icon--white collapsible__chevron">
+          <use xlink:href="images/sprite.svg#chevron"></use>
+        </svg>
+      </header>
+      <div class="collapsible__content">
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident
+          reiciendis doloribus illo quidem alias. Eos nihil voluptatem ad fugit
+          reiciendis enim officia itaque impedit debitis, modi totam illum eaque
+          quos.
+        </p>
+      </div>
+    </div>
+    <!-- End Collapsible -->
+    <script>
+      const collapsibles = document.querySelectorAll(".collapsible");
+      collapsibles.forEach((item) =>
+        item.addEventListener("click", function () {
+          this.classList.toggle("collapsible--expanded");
+        })
+      );
+    </script>
   </body>
 </html>
