feat: add navbar

--- a/index.html
+++ b/index.html
@@ -20,46 +20,20 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <!-- Block -->
-    <section class="block container">
-      <div class="block__header">
-        <h2 class="block__heading">Heading</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex tempore
-          voluptatibus cupiditate harum minus. Sapiente delectus ipsa neque est
-          omnis. Nobis obcaecati nihil saepe aliquid, temporibus fugiat sint non
-          repellat?
-        </p>
-      </div>
-      <!-- Card -->
-      <div style="width: 30%; margin: 20px">
-        <div class="card card--primary">
-          <div class="card__header">Title</div>
-          <div class="card__body">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-            amet accusamus delectus nobis optio. Quaerat rerum accusantium,
-            autem officiis ea doloremque iusto maxime, commodi obcaecati maiores
-            laborum minus, hic numquam!
-          </div>
-        </div>
-      </div>
-      <!-- End Card -->
-    </section>
-    <!-- End Block -->
-    <!-- Block -->
-    <section class="block block--dark block--skewed-left">
-      <div class="container">
-        <h2 class="block__heading">Heading</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex tempore
-          voluptatibus cupiditate harum minus. Sapiente delectus ipsa neque est
-          omnis. Nobis obcaecati nihil saepe aliquid, temporibus fugiat sint non
-          repellat?
-        </p>
-      </div>
-    </section>
-    <!-- End Block -->
-
+    <!-- NavBar -->
+    <nav class="nav collapsible">
+      <a class="nav__brand" href="/"><img src="images/logo.svg" alt="" /></a>
+      <svg class="icon icon--white nav__toggler">
+        <use xlink:href="images/sprite.svg#menu"></use>
+      </svg>
+      <ul class="list nav__list collapsible__content">
+        <li class="nav__item"><a href="#">Hosting</a></li>
+        <li class="nav__item"><a href="#">VPS</a></li>
+        <li class="nav__item"><a href="#">Domain</a></li>
+        <li class="nav__item"><a href="#">Pricing</a></li>
+      </ul>
+    </nav>
+    <!-- End NavBar -->
     <script>
       const collapsibles = document.querySelectorAll(".collapsible");
       collapsibles.forEach((item) =>
