--- a/index.html
+++ b/index.html
@@ -20,32 +20,42 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <!-- Hero -->
-    <section class="block block--dark block--skewed-left hero">
-      <div class="container grid grid--1x2">
-        <!-- First Column -->
-        <header class="block__header hero__content">
-          <h1 class="block__heading">Cloud Hosting for Proc</h1>
-          <p class="hero__tagline">
-            Deploy your websites in less than 60 seconds
-          </p>
-          <a href="#" class="btn btn--accent btn--stretched">Get started</a>
-        </header>
-        <!-- End First Column -->
-        <!-- Second Column -->
-        <picture>
-          <source
-            type="image/webp"
-            srcset="images/banner.webp 1x, images/banner@2x.webp 2x" />
-          <source
-            type="image/png"
-            srcset="images/banner.png 1x, images/banner@2x.png 2x" />
-          <img class="hero__image" src="images/banner.png" alt=""
-        /></picture>
-        <!-- End Second Column -->
+    <!-- Block Domain -->
+    <section class="block container block-domain">
+      <header class="block__header">
+        <h2>Starting at $9 per month</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum harum
+          iusto vero aperiam sit quam error sint nobis impedit!
+        </p>
+      </header>
+      <!-- Input Group -->
+      <div class="input-group">
+        <input
+          class="input"
+          type="text"
+          name="text"
+          id="text"
+          placeholder="Enter domain name here ..."
+        />
+        <button class="btn btn--accent">
+          <svg class="icon">
+            <use xlink:href="images/sprite.svg#search"></use>
+          </svg>
+          Search
+        </button>
       </div>
+      <!-- End Input Group -->
+      <ul class="list block-domain__prices">
+        <li><span class="badge badge--secondary">.com 6$</span></li>
+        <li>.sg 10$</li>
+        <li>.space 11$</li>
+        <li>.info 14$</li>
+        <li>.net 10$</li>
+        <li>.xyz 10$</li>
+      </ul>
     </section>
-    <!-- End Hero -->
+    <!--End Block Domain -->
     <script>
       const collapsibles = document.querySelectorAll(".collapsible");
       collapsibles.forEach((item) =>
