--- a/index.html
+++ b/index.html
@@ -20,80 +20,61 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <!-- Show Case -->
-    <div class="block block--dark block--skewed-right block-showcase">
+    <!--  Testimonials Block-->
+    <section class="block">
       <header class="block__header">
-        <h2>User-friendly Control Panel</h2>
+        <h2>What our customers are saying</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
+          eligendi!
+        </p>
       </header>
-      <div class="container grid grid--1x2">
-        <picture class="block-showcase__image">
-          <img src="images/ipad.png" alt="" />
-        </picture>
-        <ul class="list">
-          <li>
-            <!-- Media Component -->
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#snap"></use>
+      <div class="container">
+        <!--  Testimonials -->
+        <div class="card testimonial">
+          <div class="grid grid--1x2">
+            <div class="testimonial__image">
+              <img
+                src="images/testimonial.jpg"
+                alt="A happy, smiling customer"
+              />
+              <span class="icon-container icon-container--accent">
+                <svg class="icon icon--white icon--small">
+                  <use xlink:href="images/sprite.svg#quotes"></use>
                 </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Easy Start and Managed Update</h3>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Dolores quis odit a, in praesentium ipsam molestias
-                  voluptatibus, tempora omnis expedita doloremque quas tenetur
-                  tempore repellendus saepe at sequi? Optio, in!
-                </p>
-              </div>
+              </span>
             </div>
-            <!-- End Media Component -->
-          </li>
-          <li>
-            <!-- Media Component -->
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#growth"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Staging, Git & WP-CLI</h3>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Dolores quis odit a, in praesentium ipsam molestias
-                  voluptatibus, tempora omnis expedita doloremque quas tenetur
-                  tempore repellendus saepe at sequi? Optio, in!
-                </p>
-              </div>
-            </div>
-            <!-- End Media Component -->
-          </li>
-          <li>
-            <!-- Media Component -->
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#wordpress"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Dynamic Cashing and More</h3>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Dolores quis odit a, in praesentium ipsam molestias
-                  voluptatibus, tempora omnis expedita doloremque quas tenetur
-                  tempore repellendus saepe at sequi? Optio, in!
-                </p>
-              </div>
-            </div>
-            <!-- End Media Component -->
-          </li>
-        </ul>
+            <!-- Quote Component -->
+            <blockquote class="quote">
+              <p class="quote__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Suscipit blanditiis possimus saepe commodi animi tempore eveniet
+                aliquid, unde ea magni iste molestias porro magnam explicabo,
+                laborum, aut ratione inventore quae?
+              </p>
+              <footer>
+                <!-- Media Quote Component -->
+                <div class="media">
+                  <div class="media__image">
+                    <svg class="icon icon--primary quote__line">
+                      <use xlink:href="images/sprite.svg#line"></use>
+                    </svg>
+                  </div>
+                  <div class="media__body">
+                    <h3 class="media__title quote__author">John Smith</h3>
+                    <p class="quote__organization">ABC Company</p>
+                  </div>
+                </div>
+                <!-- End Media Quote Component -->
+              </footer>
+            </blockquote>
+            <!-- End Quote Component -->
+          </div>
+        </div>
+        <!-- End Testimonials -->
       </div>
-    </div>
-    <!-- End Show Case -->
+    </section>
+    <!--End  Testimonials Block-->
     <script>
       const collapsibles = document.querySelectorAll(".collapsible");
       collapsibles.forEach((item) =>
