--- a/index.html
+++ b/index.html
@@ -20,61 +20,96 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <!--  Testimonials Block-->
-    <section class="block">
-      <header class="block__header">
-        <h2>What our customers are saying</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde,
-          eligendi!
-        </p>
-      </header>
-      <div class="container">
-        <!--  Testimonials -->
-        <div class="card testimonial">
-          <div class="grid grid--1x2">
-            <div class="testimonial__image">
-              <img
-                src="images/testimonial.jpg"
-                alt="A happy, smiling customer"
-              />
-              <span class="icon-container icon-container--accent">
-                <svg class="icon icon--white icon--small">
-                  <use xlink:href="images/sprite.svg#quotes"></use>
-                </svg>
-              </span>
-            </div>
-            <!-- Quote Component -->
-            <blockquote class="quote">
-              <p class="quote__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Suscipit blanditiis possimus saepe commodi animi tempore eveniet
-                aliquid, unde ea magni iste molestias porro magnam explicabo,
-                laborum, aut ratione inventore quae?
-              </p>
-              <footer>
-                <!-- Media Quote Component -->
-                <div class="media">
-                  <div class="media__image">
-                    <svg class="icon icon--primary quote__line">
-                      <use xlink:href="images/sprite.svg#line"></use>
-                    </svg>
-                  </div>
-                  <div class="media__body">
-                    <h3 class="media__title quote__author">John Smith</h3>
-                    <p class="quote__organization">ABC Company</p>
-                  </div>
-                </div>
-                <!-- End Media Quote Component -->
-              </footer>
-            </blockquote>
-            <!-- End Quote Component -->
+    <footer class="block block--dark footer">
+      <div class="container grid footer__sections">
+        <!-- Collapsible Item -->
+        <section class="collapsible collapsible--expanded footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Products</h2>
+
+            <svg class="icon icon--primary icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">WordPress Hosting</a></li>
+              <li><a href="#">Free Automated Word</a></li>
+              <li><a href="#">Migrations</a></li>
+              <li><a href="#">Domain Names</a></li>
+              <li><a href="#">Mongthly Web Hosting</a></li>
+            </ul>
           </div>
-        </div>
-        <!-- End Testimonials -->
+        </section>
+        <!-- End Collapsible Item -->
+        <!-- Collapsible Item -->
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Company</h2>
+
+            <svg class="icon icon--primary icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">WordPress Hosting</a></li>
+              <li><a href="#">Free Automated Word</a></li>
+              <li><a href="#">Migrations</a></li>
+              <li><a href="#">Domain Names</a></li>
+              <li><a href="#">Monthly Web Hosting</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <!-- End Collapsible Item -->
+        <!-- Collapsible Item -->
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Support</h2>
+
+            <svg class="icon icon--primary icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">WordPress Hosting</a></li>
+              <li><a href="#">Free Automated Word</a></li>
+              <li><a href="#">Migrations</a></li>
+              <li><a href="#">Domain Names</a></li>
+              <li><a href="#">Mongthly Web Hosting</a></li>
+            </ul>
+          </div>
+        </section>
+        <!-- End Collapsible Item -->
+        <!-- Collapsible Item -->
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Domain</h2>
+
+            <svg class="icon icon--primary icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">WordPress Hosting</a></li>
+              <li><a href="#">Free Automated Word</a></li>
+              <li><a href="#">Migrations</a></li>
+              <li><a href="#">Domain Names</a></li>
+              <li><a href="#">Mongthly Web Hosting</a></li>
+            </ul>
+          </div>
+        </section>
+        <!-- End Collapsible Item -->
+
+        <section class="footer__brand">
+          <img src="images/logo.svg" alt="" />
+          <p class="footer__copyright">&copy; 2024 Oleh Bulanchuk</p>
+        </section>
       </div>
-    </section>
-    <!--End  Testimonials Block-->
+    </footer>
     <script>
       const collapsibles = document.querySelectorAll(".collapsible");
       collapsibles.forEach((item) =>
